// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Carousel > Snapshots > matches default snapshot 1`] = `
<div
  aria-roledescription="carousel"
  class="carousel"
  data-testid="carousel"
  role="region"
>
  Test content
</div>
`;

exports[`Carousel > Snapshots > matches disabled state snapshot 1`] = `
<div
  aria-roledescription="carousel"
  class="carousel"
  data-testid="carousel"
  disabled=""
  role="region"
>
  Test content
</div>
`;
